# ZetaNoise

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/: 1_basic_generation.ipynb
tests/: conftest.py  test_generator.py
zetanoise/: __init__.py  generator.py
