[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zetanoise"
version = "0.1.0"
description = "A Python library for generating noise modulated by Riemann zeta function zeros (rigid randomness)."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
keywords = ["riemann-hypothesis", "randomness", "rng", "machine-learning", "quantum", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "mpmath>=1.2",
]

[project.urls]
"Homepage" = "https://github.com/your-username/zetanoise"
"Bug Tracker" = "https://github.com/your-username/zetanoise/issues"

[tool.setuptools.packages]
find = {}
